# pos-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pos-api.slnx
.github/workflows/: deploy.yml
Core/Application/: Application.csproj  DependencyInjection.cs
Core/Application/Behaviors/: ValidationBehavior.cs
Core/Application/Dto/: AuthResponseDto.cs  BasketItemDto.cs  CategoryDto.cs  CreditStatsDto.cs  CurrenUserResponse.cs  CustomerCreditDto.cs  CustomerCreditSummaryDto.cs  DailySummaryDto.cs  NearExpiryProductDto.cs  PaymentHistoryDto.cs  ProductDto.cs  PromotionResponse.cs  RecentTransactionDto.cs  StaffDto.cs  StoreSettingsDto.cs  StoreSettingsResponseDto.cs  TopProductResponse.cs  TransactionDetailsDto.cs
Core/Application/Interfaces/: IAppIdentityDbContext.cs  IJwtService.cs  (+6 more)
Core/Domain/: Domain.slnx
Infrastructure/Infrastructure/: DependencyInjection.cs  Infrastructure.csproj
Presentation/pos-mobile/: .env.example  app.json  eslint.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
Presentation/pos-webapi/: Program.cs  appsettings.Development.json  appsettings.json  pos-webapi.csproj  pos-webapi.http
Presentation/pos-webui/: .dockerignore  CHANGELOG.md  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Presentation/pos-webui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
Presentation/pos-webui/src-tauri/binaries/: appsettings.json
Presentation/pos-webui/src-tauri/capabilities/: default.json
Presentation/pos-webui/src-tauri/src/: lib.rs  main.rs
(+383 files in other folders)
