[package]
name = "bizflow"
version = "0.1.0"
edition = "2021"

[lib]
name = "bizflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-log = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
log = "0.4.29"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
