[package]
name = "bizflow"
version = "0.1.0"
edition = "2021"

[lib]
name = "bizflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
